--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -262,6 +262,9 @@ enable = true
 enabled = true # 是否启用WebUI
 mode = "production" # 模式: development(开发) 或 production(生产)
 host = "127.0.0.1" # WebUI 服务器监听地址
+                   # IPv4: 0.0.0.0 (所有IPv4接口) / 127.0.0.1 (仅本地)
+                   # IPv6: :: (所有接口，支持IPv4+IPv6双栈) / ::1 (仅本地IPv6)
+                   # 推荐使用 :: 实现双栈支持
 port = 8001 # WebUI 服务器端口
 
 # 防爬虫配置
