feat：做梦可以私发

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "7.2.2"
+version = "7.2.3"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 # 如果你想要修改配置文件，请递增version的值
@@ -128,6 +128,11 @@ global_memory = false # 是否允许记忆检索进行全局查询
 interval_minutes = 60 # 做梦时间间隔（分钟），默认30分钟
 max_iterations = 20 # 做梦最大轮次，默认20轮
 first_delay_seconds = 1800 # 程序启动后首次做梦前的延迟时间（秒），默认60秒
+
+# 做梦结果推送目标，格式为 "platform:user_id"
+# 例如: "qq:123456" 表示在做梦结束后，将梦境文本额外发送给该QQ私聊用户。
+# 为空字符串时不推送。
+dream_send = ""
 
 # 做梦时间段配置，格式：["HH:MM-HH:MM", ...]
 # 如果列表为空，则表示全天允许做梦。
