--- a/helm-chart/templates/core/pvc.yaml
+++ b/helm-chart/templates/core/pvc.yaml
@@ -4,13 +4,30 @@ metadata:
   name: {{ .Release.Name }}-maibot-core
   namespace: {{ .Release.Namespace }}
 spec:
-  {{- if .Values.core.persistence.accessModes }}
+  {{- if .Values.core.persistence.data.accessModes }}
   accessModes:
-    {{ toYaml .Values.core.persistence.accessModes | nindent 4 }}
+    {{ toYaml .Values.core.persistence.data.accessModes | nindent 4 }}
   {{- end }}
   resources:
     requests:
-      storage: {{ .Values.core.persistence.size }}
-  {{- if .Values.core.persistence.storageClass }}
-  storageClassName: {{ .Values.core.persistence.storageClass | default nil }}
+      storage: {{ .Values.core.persistence.data.size }}
+  {{- if .Values.core.persistence.data.storageClass }}
+  storageClassName: {{ .Values.core.persistence.data.storageClass | default nil }}
+  {{- end }}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: {{ .Release.Name }}-maibot-core-config
+  namespace: {{ .Release.Namespace }}
+spec:
+  {{- if .Values.core.persistence.config.accessModes }}
+  accessModes:
+    {{ toYaml .Values.core.persistence.config.accessModes | nindent 4 }}
+  {{- end }}
+  resources:
+    requests:
+      storage: {{ .Values.core.persistence.config.size }}
+  {{- if .Values.core.persistence.config.storageClass }}
+  storageClassName: {{ .Values.core.persistence.config.storageClass | default nil }}
   {{- end }}
