--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -2,5 +2,5 @@ apiVersion: v2
 name: maibot
 description: "Maimai Bot, a cyber friend dedicated to group chats"
 type: application
-version: 0.11.6-beta
-appVersion: 0.11.6-beta
+version: 0.12.0
+appVersion: 0.12.0
