--- a/helm-chart/templates/other/job-preprocessor.yaml
+++ b/helm-chart/templates/other/job-preprocessor.yaml
@@ -15,11 +15,15 @@ spec:
       restartPolicy: Never
       containers:
         - name: preprocessor
-          image: {{ .Values.pre_processor.image.repository | default "reg.mikumikumi.xyz/maibot/preprocessor" }}:{{ .Values.pre_processor.image.tag | default "0.11.6-beta" }}
+          image: {{ .Values.pre_processor.image.repository | default "reg.mikumikumi.xyz/maibot/preprocessor" }}:{{ .Values.pre_processor.image.tag | default "0.12.0" }}
           imagePullPolicy: {{ .Values.pre_processor.image.pullPolicy }}
           env:
             - name: RELEASE_NAME
               value: {{ .Release.Name }}
+            - name: IS_WEBUI_ENABLED
+              value: {{ .Values.core.webui.enabled | quote }}
+            - name: IS_MMSG_ENABLED
+              value: {{ .Values.core.maim_message_api_server.enabled | quote }}
             {{- if or .Values.config.override_adapter_config .Release.IsInstall }}
             - name: CONFIG_ADAPTER_B64
               value: {{ .Values.config.adapter_config | b64enc | quote }}
